<resources>
    <string name="app_name">Weekend Assignment 3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_reservation">Reservations</string>

    <string name="google_maps_key">AIzaSyAGIIlVVyy6ApmCi4dHOX7fSdAo--tKpA0</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="reserved_until">Reserved until</string>
    <string name="reservation_details">Reservation details:</string>
    <string name="minimum_time">Minimum time</string>
    <string name="maximum_time">Maximum time</string>
    <string name="cost">Cost per minute</string>
    <string name="min">Min</string>
    <string name="xyz">xyz</string>
    <string name="max">Max</string>
    <string name="tap_to_reserve">Tap to reserve</string>

    <string name="reservation_date_label">You reserved this parking space on:</string>
    <string name="reservation_date"><![CDATA[<Reservation date>]]></string>
    <string name="reservation_name"><![CDATA[<Reservation name>]]></string>
    <string name="some_error">Unfortunately here has been an error.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
